<resources>
    <string name="app_name">Awajima App</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="follow_summary_not_following">Not Following</string>
    <string name="follow_summary_following">Following</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="google_api_key33">AIzaSyD-wXTX8DBPhyESIeVjaGTLCclr8eculzM</string>
    <string name="reply_title">Default reply action</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dlg_delete_question">Are you sure you want to delete dialogs?</string>
    <string name="dlg_delete_dialogs">Delete dialogs</string>
    <string name="title_home">Home</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="error_relogin_to_chat">Relogin to Chat Filed:</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_loading_dialogs">Loading dialogs…</string>
    <string name="dlg_loading_users">Loading users…</string>
    <string name="dlg_updating_dialog">Updating dialog…</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_Cancel">Cancel</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_connecting_another_conversation">Connecting another conversation…</string>
    <string name="dlg_leave_question">Are you sure you want to leave dialog?</string>
    <string name="dlg_leave_dialog">Leave dialog</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="dlg_wait_for_chat_connection_title">Please wait for connection</string>
    <string name="dlg_wait_for_chat_connection">Please wait for a connection to the chat as it now is in the progress</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="batched_location_updates">Batched location updates</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="join_chat_error">Joining Chat error</string>
    <string name="load_chat_history_error">Chat History Loading Error</string>
    <string name="chat_subtitle_plural">%s members</string>
    <string name="chat_subtitle_singular">%s member</string>
    <string name="chat_conference_join">Join</string>
    <string name="chat_info_subtitle_plural">%s members</string>
    <string name="chat_info_subtitle_singular">%s member</string>
    <string name="packet_failed">Packet loss occurs</string>
    <string name="manage_group_chat_subtitle_single">%s user in call</string>
    <string name="manage_group_load_user_error">Load User Error</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pay small, small</string>
    <string name="nav_header_subtitle">to achieve Big things</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="accountAdded">The account has been added</string>
    <string name="back">Go back</string>
    <string name="not_available">Not available</string>
    <string name="user">User</string>
    <string name="profile_desc">Ezekiel, Gwun-orene Rufus, a Lead Creator, Investment Consultant, and the Group CEO of the Lumgwun Solutions</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="reminder_set">Date reminder set</string>
    <string name="reminder_canceled">Date reminder cancelled</string>
    <string name="date_today">Date today</string>
    <string name="date_tomorrow">Date tomorrow</string>
    <string name="date_yesterday">Date yesterday</string>
    <string name="date_week">Date is a week from now</string>
    <string name="date_2_week">Date is a 2 weeks from now</string>
    <string name="date_days">Date days </string>
    <string name="loading1">Loading... </string>
    <string name="date">Date </string>
    <string name="accountSid">SK0bf25b7e113908fb03287c9736f41922 </string>
    <string name="authToken">Date </string>
    <string name="decline">decline</string>
    <string name="promptPhoneNo">Enter Phone Number</string>
    <string name="phoneUpdated"> Phone Number updated</string>
    <string name="invalidPhoneNo">Invalid Phone Number</string>
    <string name="invalidAddress">Invalid Address</string>
    <string name="addressUpdated">Address Updated</string>
    <string name="passwordUpdated">password Updated</string>
    <string name="passwordinvalid">Password Invalid</string>
    <string name="transferCompleted">Transfer Completed</string>
    <string name="transferFailed">Transfer Failed</string>
    <string name="promptUserId">User ID</string>
    <string name="check">Check</string>
    <string name="totalBalance">Total Balance</string>
    <string name="seeSpecificMessage">See specific message</string>
    <string name="inputMessageId">Input user ID</string>
    <string name="noAccess">No Access</string>
    <string name="userID">User ID</string>
    <string name="userName">User Name</string>
    <string name="interestUpdated">Interest Updated</string>
    <string name="interestNotUpdated">Interest not updated</string>
    <string name="tellerPromoted">Teller Promoted</string>
    <string name="tellerNotPromoted">Teller Not Promoted</string>
    <string name="notTeller">Not Teller</string>
    <string name="UserAddress">User Address</string>
    <string name="cantLeaveMessage">Can not leave a message</string>
    <string name="messageLeft">Message sent</string>
    <string name="userAddress">User Address</string>
    <string name="userPhone">User Phone</string>
    <string name="noCurrentUser">No current User</string>
    <string name="noPaymentDocument">No payment Document</string>
    <string name="transactionFailed">Transaction failed</string>
    <string name="withdrawWithWorker">Withdraw with a Teller</string>
    <string name="menu_settings">Settings</string>
    <string name="invalidName">invalid Name</string>
    <string name="nameUpdated">Name updated</string>
    <string name="accountType">Account Type</string>
    <string name="interestAdded">Interest added</string>
    <string name="idPrefix">Message Id:</string>
    <string name="interestNotAdded">Interest not added</string>
    <string name="accountBalance">Account Balance</string>
    <string name="no_accounts">No accounts</string>
    <string name="accountName">No Name</string>
    <string name="balance">Balance</string>
    <string name="accountId">Account ID</string>
    <string name="acct_no">Account No:</string>
    <string name="bank">Account ID</string>
    <string name="customerSet">Set Customer</string>
    <string name="insufficientFunds">Settings</string>
    <string name="loan_amount_prompt">Loan amount: </string>
    <string name="interest_rate_prompt">Interest rate: </string>
    <string name="loan_period_prompt">Months: </string>
    <string name="loan_button_text">Calculate Payments</string>
    <string name="save">Save Contact</string>
    <string name="leaveMessage">Leave a Message</string>
    <string name="confirm">Confirm</string>
    <string name="promptMessage">Message</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name_hint">Name</string>
    <string name="stock_hint">Stock</string>
    <string name="add_item_label">Add items:</string>
    <string name="sell_item_btt">Sell</string>
    <string name="sell_item_label">Sell items:</string>
    <string name="cost_hint">Cost</string>
    <string name="price_hint">Price</string>
    <string name="add_btt">Add</string>
    <string name="defaul_add_sell_value">1</string>
    <string name="image_product_content_description">Product image</string>
    <string name="hint_enter_your_message">Enter push message here</string>
    <string name="received_messages">Received Push Notifications</string>
    <string name="no_messages">No messages received yet</string>
    <string name="profile">Profile</string>
    <string name="acceptbutton">Accept ride</string>
    <string name="beginridebutton">BEGIN RIDE</string>
    <string name="endridebutton">END RIDE</string>
    <string name="text_desc">Description</string>
    <string name="text_full_day">Full Day</string>
    <string name="text_half_day">Half Day</string>
    <string name="book_full_day">BOOK FULL DAY TRIP</string>
</resources>