<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:enabled="true">
    <PreferenceCategory app:title="Team Preferences">

        <EditTextPreference
            app:defaultValue="Awajima"
            app:key="signature"
            app:title="Team Organization Name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:allowDividerBelow="true"
            app:defaultValue="Emergencies"
            app:entries="@array/EmergencyCategory"
            app:entryValues="@array/EmergencyCategory"
            app:key="EMERGENCY_REPORT_GROUP"
            app:title="Response Team Category"
            app:useSimpleSummaryProvider="true"></ListPreference>
        <intent android:action="android.intent.action.APPLICATION_PREFERENCES"></intent>

    </PreferenceCategory>
    <PreferenceCategory app:title="State Preference">

        <ListPreference
            app:defaultValue="Rivers"
            app:entries="@array/state"
            app:entryValues="@array/state"
            app:key="EMERGENCY_REPORT_STATE"
            app:title="Response Team State"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>