<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home_cm"
        android:enabled="true"
        android:icon="@drawable/home2"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile_cm"
        android:enabled="true"
        android:icon="@drawable/user3"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification_cm"
        android:enabled="true"
        android:icon="@drawable/notification"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_support_cm"
        android:enabled="true"
        android:icon="@drawable/about2"
        android:title="@string/support"
        app:showAsAction="ifRoom" />
</menu>