<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/prodImageExtCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/prod_det_exp_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_product_content_description"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_gallery"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linear_prod_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/prod_det_image"
                    style="@style/productImage"
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@+id/edit_prod_name"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/image_product_content_description"
                    android:src="@android:drawable/ic_menu_gallery" />

                <EditText
                    android:id="@+id/edit_prod_name"
                    style="@style/inputBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/prod_det_image"
                    android:ems="10"
                    android:hint="@string/name_hint" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:weightSum="2"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edit_prod_cost"
                    style="@style/inputBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cost_hint"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edit_prod_price"
                    style="@style/inputBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/price_hint"
                    android:inputType="numberDecimal" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textStock"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/stock_hint"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textStockNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock_hint" />
            </LinearLayout>

            <TextView
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_item_label" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/units_to_add"
                    style="@style/inputBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/defaul_add_sell_value" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btt_add_stock"
                    style="@style/bttStyle"
                    android:background="@drawable/rect6d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_btt" />
            </LinearLayout>


            <TextView
                style="@style/labelStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sell_item_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/units_to_sell"
                    style="@style/inputBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="@string/defaul_add_sell_value" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btt_sell_units"
                    style="@style/bttStyle"
                    android:padding="20dp"
                    android:background="@drawable/rect6d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sell_item_btt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="bottom" >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bttSaveItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:background="@drawable/rect6d"
                    android:layout_margin="10dp"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>