<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTourDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_layer_2a"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/text_desc"
            android:textColor="@color/red_brown_dark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTourFullDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_layer_2a"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/text_full_day"
            android:textColor="@color/red_brown_dark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTourHalfDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_layer_2a"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/text_half_day"
            android:textColor="@color/red_brown_dark" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBookTour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_layer_2a"
        android:gravity="center"
        android:text="@string/book_full_day"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red_brown_dark"
        android:visibility="gone" />

</LinearLayout>