<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skylightapp.Bookings.TaxiDriverRideAct">

    <fragment
        android:id="@+id/mapRide"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acceptbutton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/rect_their4"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/red_brown_dark"
        android:text="@string/acceptbutton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/beginridebutton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_their4"
        android:padding="20dp"
        android:textColor="@color/red_brown_dark"
        android:visibility="invisible"
        android:text="@string/beginridebutton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/endridebutton"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rect_their4"
        android:padding="20dp"
        android:textColor="@color/red_brown_dark"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/endridebutton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>