<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/layout"
    android:background="@drawable/shape_rect14"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/title"
        android:text="@string/leaveMessage"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

    <EditText
        android:id="@+id/inputId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Id"
        android:padding="40dp"
        android:background="@drawable/shape_rect14"
        android:inputType="number"
        android:drawableStart="@drawable/ic_notifications_black_24dp"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/promptMessage"
        android:padding="40dp"
        android:background="@drawable/shape_rect14"
        android:layout_below="@+id/inputId"
        android:drawableStart="@drawable/ic_notifications_black_24dp"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification"
        android:textSize="25sp"
        android:padding="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:background="@drawable/rect_their_message"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_margin_bottom"/>

</RelativeLayout>
