<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_messages"
    style="@style/MatchParent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_message_out"
            style="@style/MatchWidth"
            android:background="@drawable/shape_layer_3b"
            android:hint="@string/hint_enter_your_message"
            android:inputType="textMultiLine"
            android:maxLength="@integer/push_max_length"
            android:lines="10"
            android:padding="@dimen/padding_large"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/progress_barPush"
            style="@style/WrapContent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:text="Send Message"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:onClick="doPushNoti"
        android:id="@+id/btn_Push_Notification"
        android:textStyle="italic"
        android:textColor="@color/red_brown_dark"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect6d"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/text_messages_header"
            style="@style/HeaderStyle"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/received_messages" />

        <TextView
            android:id="@+id/text_empty_messages"
            style="@style/PushMessageItemStyle"
            android:gravity="center"
            android:text="@string/no_messages" />

        <ListView
            android:id="@+id/list_messages"
            style="@style/MatchParent" />
    </LinearLayout>
</LinearLayout>